test/spec_vectors/exports/ok/module_77.wat
(module (export "a" (memory 0)) (memory 0))