test/spec_vectors/exports/fail/module_81.wat
(module (export "a" (memory 0)))